--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+
     <ul>
         <li><a href="recipes/lasagna.html">Enchilada Lasagna</a></li>
-        <li></li>
+        <li><a href="recipes/burger.html">Bronco Burger</a></li>
     </ul>
     
 </body>
