Added Cookie Butter Cookie recipe
I added a new page for the Cookie Butter Cookie. Added it to the
index page as a link. Removed some spaces in the other pages and
cleaned up a little bit of the code.

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bronco Burger</title>
 </head>
 <body>
     <h1>Delicious Bronco Burger!</h1>
@@ -12,7 +12,7 @@
     <h3>Description</h3>
     <p>This is the delicious bronco burger that has been in my family for thousands of years!</p>
     <p>It is the juciest and tastiest burger ever and its so good it makes you wanna slap yo momma!</p>
-    <br>
+
     <h3>Ingredients</h3>
         <ul>
             <li>5 Fresh Jalapenos</li>
@@ -29,7 +29,7 @@
             <li>8 large potato buns</li>
             <li>8 sliced peperjack cheese</li>
         </ul>
-
+    <h3>Directions</h3>
         <ol>
             <li>Preheat a grill for high heat. When the grill is hot, roast the jalapeno peppers until blackened on all sides. Place in a plastic bag to sweat and loosen the blackened skin. Rub the skin off, then seed if desired, and chop.</li>
             <li>In a large bowl, use your hands to mix together the chopped jalapenos, ground beef, salt, pepper, egg, steak sauce, onion, hot pepper sauce, oregano, Worcestershire sauce, garlic salt and Fritos®. Divide into 8 balls, and flatten into patties.</li>
