--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Enchilada Lasagna</a></li>
         <li><a href="recipes/burger.html">Bronco Burger</a></li>
+        <li><a href="recipes/cookie.html">Cookie Butter Cookie</a></li>
     </ul>
     
 </body>
