--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Enchilada Lasagna</title>
 </head>
 <body>
     <h1>Enchilada Lasagna</h1>
@@ -13,7 +13,7 @@
     <h3>Description</h3>
     <p>Delicious enchilada lasagna fresh out the oven!</p>
     <p>This is is something I grew up with as a kid and loved it. We had it every weekend and it was amazing. I used to shove it in my ass.</p>
-    <br>
+    
     <h3>Ingredients</h3>
         <ul>
             <li>1 Tablespoon Veg Oil</li>
